tests/ui/where-clauses/method-suggestion-no-duplication.stderr
error[E0599]: no method named `is_empty` found for struct `Foo` in the current scope
  --> $DIR/method-suggestion-no-duplication.rs:7:15
   |
LL | struct Foo;
   | ---------- method `is_empty` not found for this struct
...
LL |     foo(|s| s.is_empty());
   |               ^^^^^^^^ method not found in `Foo`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `is_empty`, perhaps you need to implement one of them:
           candidate #1: `ExactSizeIterator`
           candidate #2: `RangeBounds`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
